# ripel

./: .gitconfig  Cargo.toml  LICENSE  README.md
crates/ripel/: Cargo.toml
crates/ripel-core/: Cargo.toml  build.rs
crates/ripel-core/src/: entity.rs  environment.rs  error.rs  event.rs  helper.rs  interpolate.rs  jinja.rs  lib.rs  processor.rs  registry.rs  sqlx_mysql.rs  stream.rs  ulid.rs  value.rs
crates/ripel-core/src/refs/: helpers.rs  hop.rs  hydrate.rs  mod.rs  planner.rs  resolver.rs  sql_builder.rs  types.rs
crates/ripel-core/src/sql/: helpers.rs  mod.rs  on.rs  query.rs  selector.rs
crates/ripel-derive/: Cargo.toml
crates/ripel-derive/src/: codegen.rs  from_object.rs  lib.rs  opts.rs  parse.rs  parts.rs  util.rs
crates/ripel-kafka/: Cargo.toml
crates/ripel-kafka/src/: config.rs  dlq.rs  lib.rs  producer.rs  publisher.rs
crates/ripel-mysql-cdc/: Cargo.toml
crates/ripel-mysql-cdc/src/: binlog.rs  config.rs  connection.rs  lib.rs
crates/ripel-shared/: Cargo.toml
crates/ripel-shared/src/: config.rs  health.rs  lib.rs  observability.rs  retry.rs
crates/ripel/src/: lib.rs
examples/: Cargo.toml  basic_example.rs
examples/src/querier/: README.md  main.rs
proto/: events.proto
