[workspace]
resolver = "2"
members = [
    "crates/ripel",
    "crates/ripel-core",
    "crates/ripel-derive",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["RIPeL Contributors"]
categories = ["database", "binlog", "replication", "event-sourcing"]
description = "A data serialization DSL and runtime for Change Data Capture (CDC) systems"
exclude = ["assets/", "tools/", ".github/", "crates/", "examples/wasm/assets/"]
keywords = ["database", "binlog", "replication", "event-sourcing", "cdc", "data-serialization", "dsl"]
homepage = "https://github.com/rubeniskov/ripel"
repository = "https://github.com/rubeniskov/ripel"
documentation = "https://github.com/rubeniskov/ripel"
license = "MIT"
rust-version = "1.87"

[workspace.dependencies]
minijinja = { version = "2", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "mysql", "rust_decimal", "time"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
once_cell = "1.17"
anyhow = "1.0"
regex = "1.7"
smol_str = "0.3.2"
rust_decimal = { version = "1" }
time = { version = "0.3", features = ["parsing", "formatting"] }
ulid = { version = "1", features = ["serde", "uuid"] }

ripel-derive = { path = "crates/ripel-derive" }
ripel-core = { path = "crates/ripel-core" }
ripel = { path = "crates/ripel" }