[package]
name = "ripel-core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and event-driven architecture for RIPeL"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true

# Additional dependencies
dashmap = "5.5"
crossbeam = "0.8"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"

[build-dependencies]
tonic-build.workspace = true