[package]
name = "ripel-shared"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared utilities and common logic for RIPeL"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
config.workspace = true

# Additional dependencies
once_cell = "1.19"
fastrand = "2.0"

[dev-dependencies]
mockall.workspace = true