[package]
name = "ripel"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RIPeL - Reliable, Intelligent, and Performant Event Log"


[[bin]]
name = "ripel"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ripel-core.workspace = true
ripel-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
